[gd_scene format=3 uid="uid://bhcsdg82k8da3"]

[ext_resource type="PackedScene" uid="uid://i04aicow4204" path="res://scenes/player/player.tscn" id="1_eqs6t"]
[ext_resource type="Script" uid="uid://b7myjcp76j6el" path="res://scenes/levels/titanic/world.gd" id="1_itb0x"]
[ext_resource type="PackedScene" uid="uid://6xhafq484y2j" path="res://scenes/checkpoint/checkpoint.tscn" id="2_18k4y"]
[ext_resource type="Texture2D" uid="uid://dwb4gri7s0s2u" path="res://assets/sprites/titanic_section1_tileset.png" id="2_p0xke"]
[ext_resource type="PackedScene" uid="uid://7r3dc777wsuv" path="res://scenes/ui/stamina_bar/stamina_bar.tscn" id="4_god6p"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_m5je1"]
load_path = "res://.godot/imported/titanic_section2_tileset.png-da5fede87142a2326c2721eaf5a617a1.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_i7j87"]
load_path = "res://.godot/imported/titanic_section3_tileset.png-c55604db7b63e58d6182476772dba2b0.ctex"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fit6c"]
size = Vector2(2245.5747, 37.256927)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ceux"]
size = Vector2(1847.5913, 37.256927)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rmxbi"]
size = Vector2(890.0177, 29.849842)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wl2br"]
size = Vector2(897.6812, 36.705654)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y8upj"]
size = Vector2(2082.5786, 45.202675)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1bg27"]
size = Vector2(1661.6405, 34.224148)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pa72x"]
size = Vector2(343.48495, 41.66326)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eo0ks"]
size = Vector2(109.19596, 29.938164)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_btq3c"]
size = Vector2(276.30862, 29.487423)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ratq"]
size = Vector2(181.79456, 24.239166)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_god6p"]
size = Vector2(351, 40.649414)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m5je1"]
size = Vector2(2500, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i7j87"]
size = Vector2(629, 41)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p0xke"]
size = Vector2(4000, 58.665268)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_itb0x"]
size = Vector2(262.5476, 20.972595)

[node name="Titanic" type="Node2D" unique_id=1739797682]

[node name="World" type="Node2D" parent="." unique_id=389389109]
position = Vector2(2825, -857)
script = ExtResource("1_itb0x")

[node name="Sprite2D" type="Sprite2D" parent="World" unique_id=2049143091]
texture = ExtResource("2_p0xke")

[node name="Sprite2D2" type="Sprite2D" parent="World" unique_id=469774204]
position = Vector2(5682, -20)
texture = SubResource("CompressedTexture2D_m5je1")

[node name="Sprite2D3" type="Sprite2D" parent="World" unique_id=1223370641]
position = Vector2(10585, -219)
texture = SubResource("CompressedTexture2D_i7j87")

[node name="Deck1" type="Node2D" parent="World" unique_id=18460099]
position = Vector2(-2, 0)

[node name="StaticBody2D" type="StaticBody2D" parent="World/Deck1" unique_id=790379749]
position = Vector2(-922, 58)
rotation = 0.03610947
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Deck1/StaticBody2D" unique_id=1734527930]
shape = SubResource("RectangleShape2D_fit6c")

[node name="StaticBody2D2" type="StaticBody2D" parent="World/Deck1" unique_id=1927146843]
position = Vector2(-1152, 389)
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Deck1/StaticBody2D2" unique_id=2012381219]
rotation = 0.042218376
scale = Vector2(0.99999946, 0.99999946)
shape = SubResource("RectangleShape2D_0ceux")

[node name="StaticBody2D3" type="StaticBody2D" parent="World/Deck1" unique_id=386433326]
position = Vector2(-1644, 651)
rotation = 0.04780758
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Deck1/StaticBody2D3" unique_id=2017711455]
position = Vector2(-6.088765, -1.7109737)
shape = SubResource("RectangleShape2D_rmxbi")

[node name="StaticBody2D4" type="StaticBody2D" parent="World/Deck1" unique_id=1108850264]
position = Vector2(-696, 689.00006)
rotation = 0.038885903
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Deck1/StaticBody2D4" unique_id=150352998]
position = Vector2(8.110619, 2.6866605)
rotation = 0.01174506
shape = SubResource("RectangleShape2D_wl2br")

[node name="StaticBody2D5" type="StaticBody2D" parent="World/Deck1" unique_id=2111894808]
position = Vector2(-1631, 929)
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Deck1/StaticBody2D5" unique_id=609248773]
position = Vector2(597.2373, 43.5176)
rotation = 0.04324836
shape = SubResource("RectangleShape2D_y8upj")

[node name="StaticBody2D6" type="StaticBody2D" parent="World/Deck1" unique_id=1405621631]
position = Vector2(-736, 1299)
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Deck1/StaticBody2D6" unique_id=994104230]
position = Vector2(385.0481, 29.389496)
rotation = 0.0358153
shape = SubResource("RectangleShape2D_1bg27")

[node name="StaticBody2D7" type="StaticBody2D" parent="World/Deck1" unique_id=1284262089]
position = Vector2(-736, 1299)
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Deck1/StaticBody2D7" unique_id=819864993]
position = Vector2(-270.64722, 586.88367)
rotation = 0.20963883
scale = Vector2(0.9999999, 0.9999999)
shape = SubResource("RectangleShape2D_pa72x")

[node name="StaticBody2D8" type="StaticBody2D" parent="World/Deck1" unique_id=1612798191]
position = Vector2(-618, 1958)
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Deck1/StaticBody2D8" unique_id=82233499]
position = Vector2(-90, -28)
rotation = 0.03739632
scale = Vector2(0.9999999, 0.9999999)
shape = SubResource("RectangleShape2D_eo0ks")

[node name="StaticBody2D9" type="StaticBody2D" parent="World/Deck1" unique_id=1144660628]
position = Vector2(-618, 1958)
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Deck1/StaticBody2D9" unique_id=1194904545]
position = Vector2(129.8894, 6.4125977)
rotation = 0.20236017
scale = Vector2(0.9999999, 0.9999999)
shape = SubResource("RectangleShape2D_btq3c")

[node name="StaticBody2D10" type="StaticBody2D" parent="World/Deck1" unique_id=292188487]
position = Vector2(-270, 2001)
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Deck1/StaticBody2D10" unique_id=1390357066]
position = Vector2(79, -4.628174)
shape = SubResource("RectangleShape2D_4ratq")

[node name="StaticBody2D11" type="StaticBody2D" parent="World/Deck1" unique_id=449815791]
position = Vector2(3, 2017.0001)
rotation = 0.2627161
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Deck1/StaticBody2D11" unique_id=2020677261]
position = Vector2(11.515108, -7.2390194)
rotation = -0.03867354
shape = SubResource("RectangleShape2D_4ratq")

[node name="UpperLimit" type="ColorRect" parent="World/Deck1" unique_id=699775216]
visible = false
offset_top = 250.0
offset_right = 350.0
offset_bottom = 290.0

[node name="UpperLimitCollider" type="StaticBody2D" parent="World/Deck1/UpperLimit" unique_id=129261448]
position = Vector2(-41, 961.00006)
scale = Vector2(1, 1.0086254)
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Deck1/UpperLimit/UpperLimitCollider" unique_id=399088289]
position = Vector2(178.5, 19.333252)
scale = Vector2(1, 1.0606145)
shape = SubResource("RectangleShape2D_god6p")

[node name="UpperLimit2" type="ColorRect" parent="World/Deck1" unique_id=1276798964]
visible = false
offset_left = 550.0
offset_top = 250.0
offset_right = 3050.0
offset_bottom = 290.0

[node name="UpperLimitCollider" type="StaticBody2D" parent="World/Deck1/UpperLimit2" unique_id=1033511816]
position = Vector2(-3, 1)
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Deck1/UpperLimit2/UpperLimitCollider" unique_id=842930276]
position = Vector2(1253, 19)
shape = SubResource("RectangleShape2D_m5je1")

[node name="UpperLimit3" type="ColorRect" parent="World/Deck1" unique_id=212473535]
visible = false
offset_left = 3371.0
offset_top = 250.0
offset_right = 4001.0
offset_bottom = 290.0

[node name="UpperLimitCollider" type="StaticBody2D" parent="World/Deck1/UpperLimit3" unique_id=1505980718]
position = Vector2(-3, 1)
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Deck1/UpperLimit3/UpperLimitCollider" unique_id=2044291308]
position = Vector2(317.5, 18.5)
scale = Vector2(1.0001215, 1)
shape = SubResource("RectangleShape2D_i7j87")

[node name="LowerLimit" type="ColorRect" parent="World/Deck1" unique_id=1772140192]
visible = false
offset_top = 598.0
offset_right = 4000.0
offset_bottom = 638.0

[node name="StaticBody2D" type="StaticBody2D" parent="World/Deck1/LowerLimit" unique_id=1935835091]
position = Vector2(-3, 0)
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Deck1/LowerLimit/StaticBody2D" unique_id=985848045]
position = Vector2(2003, 20)
scale = Vector2(1, 0.68183476)
shape = SubResource("RectangleShape2D_p0xke")

[node name="Deck2" type="Node2D" parent="World" unique_id=642445485]
visible = false

[node name="ColorRect" type="ColorRect" parent="World/Deck2" unique_id=1394126886]
offset_top = -90.0
offset_right = 4000.0
offset_bottom = -50.0

[node name="Stairs" type="StaticBody2D" parent="World" unique_id=1633418102]
position = Vector2(3011, 564.0001)
rotation = -0.7853982
collision_layer = 2
collision_mask = 0

[node name="ColorRect" type="ColorRect" parent="World/Stairs" unique_id=666787617]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(11.926172, 1)
color = Color(0.670063, 0.40627286, 0.036969613, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Stairs" unique_id=1364159004]
position = Vector2(240.41675, 3.8894043)
scale = Vector2(1.8152493, 0.5732037)
shape = SubResource("RectangleShape2D_itb0x")
one_way_collision = true

[node name="Checkpoints" type="Node2D" parent="World" unique_id=2138548016]
position = Vector2(2389, 2238)

[node name="Checkpoint" parent="World/Checkpoints" unique_id=2093896556 instance=ExtResource("2_18k4y")]
position = Vector2(378, 111)
target_angle = -10.0

[node name="Checkpoint2" parent="World/Checkpoints" unique_id=92993232 instance=ExtResource("2_18k4y")]
position = Vector2(5781, 111)
target_angle = -20.0

[node name="Checkpoint3" parent="World/Checkpoints" unique_id=1226359733 instance=ExtResource("2_18k4y")]
position = Vector2(10736, 288)
target_angle = -30.0

[node name="Checkpoint4" parent="World/Checkpoints" unique_id=232646504 instance=ExtResource("2_18k4y")]
position = Vector2(11596, 288)
target_angle = -45.0

[node name="Player" parent="." unique_id=330747409 instance=ExtResource("1_eqs6t")]
position = Vector2(854, -674)

[node name="Camera2D" type="Camera2D" parent="Player" unique_id=2008680599]

[node name="StaminaBar" parent="." unique_id=126409719 instance=ExtResource("4_god6p")]

[connection signal="player_walked_through" from="World/Checkpoints/Checkpoint" to="World" method="_on_checkpoint_player_walked_through"]
[connection signal="player_walked_through" from="World/Checkpoints/Checkpoint2" to="World" method="_on_checkpoint_2_player_walked_through"]
[connection signal="player_walked_through" from="World/Checkpoints/Checkpoint3" to="World" method="_on_checkpoint_3_player_walked_through"]
[connection signal="player_walked_through" from="World/Checkpoints/Checkpoint4" to="World" method="_on_checkpoint_4_player_walked_through"]
